--- a/settings.gradle
+++ b/settings.gradle
@@ -1,4 +1,2 @@
 rootProject.name='VideoFilter'
-include ':app', ':libFrameProcessor-debug'
-
-project(':libFrameProcessor-debug').projectDir = new File('../Libraries/FrameProcessor/libFrameProcessor/')
+include ':app', ':libFrameProcessor'
